--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 	</head>
 	<body>
 		<div class="wrapper">
+      <header>
+        <h1><a href="#">Zetsy</a></h1>
+      </header>
 
-			<h1>Zetsy</h1>
 
       <img src="images/necklace.jpg" alt="">
 
