automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </header>
 
       <section id="featured">
-        <img src="images/necklace.jpg" alt="">
+        <img src="images/necklace.jpg" alt="hand crafted Arizona Navajo turquoise stone necklace">
 
         <h2>About</h2>
 
@@ -38,7 +38,7 @@
       <footer>
         <p>&copy; 2014 Zetsy, All Rights Reserved.</p>
       </footer>
-      
+
 		</div><!-- .wrapper -->
 	</body>
 </html>
