--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </section>
 
       <footer>
-        <p>&copy; 2014 Zetsy, All Rights Reserved.</p>
+        <p class="small">&copy; 2014 Zetsy, All Rights Reserved.</p>
       </footer>
 
 		</div><!-- .wrapper -->
